test version with env var

--- a/freshdesk/product-events/manifest.json
+++ b/freshdesk/product-events/manifest.json
@@ -1,5 +1,5 @@
 {
-  "platform-version": "2.2",
+  "platform-version": "2.3",
   "product": {
     "freshdesk": {
       "events": {
@@ -39,5 +39,8 @@
       }
     }
   },
-  "whitelisted-domains":[]
+  "engines": {
+    "node": "18.13.0",
+    "fdk": "9.0.0"
+  }
 }
