--- a/freshdesk/scheduled-events/manifest.json
+++ b/freshdesk/scheduled-events/manifest.json
@@ -1,5 +1,5 @@
 {
-  "platform-version": "2.2",
+  "platform-version": "2.3",
   "product": {
     "freshdesk": {
       "location": {
@@ -9,7 +9,9 @@
         }
       },
       "events": {
-        "onScheduledEvent": { "handler": "onScheduledEventHandler" }
+        "onScheduledEvent": {
+          "handler": "onScheduledEventHandler"
+        }
       },
       "functions": {
         "createSchedule": {
@@ -32,7 +34,7 @@
     "base-64": "1.0.0"
   },
   "engines": {
-    "node": "12.22.7",
-    "fdk": "7.1.2"
+    "node": "18.13.0",
+    "fdk": "9.0.0"
   }
 }
